@@ -5,6 +5,7 @@ import model.*;
 
 import java.sql.Connection;
 import java.sql.DriverManager;
+import java.sql.Timestamp;
 import java.time.LocalDate;
 import java.time.LocalDateTime;
 import java.util.ArrayList;
@@ -33,53 +34,59 @@ public class MainTestDAO {
             CentreCommerceDAO ccDAO = new CentreCommerceDAO(conn);
 
             // === Création des objets ===
-            Utilisateur u = new Utilisateur(0, "Jean", 1234);
-            u.setPtsFidelite(200);
-            utilisateurDAO.insert(u);
-            u = utilisateurDAO.getAll().getLast();
-
             CentreDeTri centre = new CentreDeTri(0, "TriTest", "Rue du Recyclage");
             centreDAO.insert(centre);
-            centre = centreDAO.getAll().getLast();
+            centre = centreDAO.getAll().get(centreDAO.getAll().size() - 1);
 
-            Poubelle poubelle = new Poubelle(0, 120, "Rue Test", TypePoubelle.JAUNE, 50);
-            poubelleDAO.insert(poubelle);
-            poubelle = poubelleDAO.getAll().getLast();
+            Utilisateur u = new Utilisateur(0, "Jean", 1234, centre.getId());
+            u.setPtsFidelite(200);
+            utilisateurDAO.insert(u);
+            u = utilisateurDAO.getAll().get(utilisateurDAO.getAll().size() - 1);
+
+            Poubelle poubelle = new Poubelle(0, 120, "Rue Test", TypePoubelle.JAUNE, 50, 90, centre);
+            poubelleDAO.insert(poubelle, centre.getId());
+            poubelle = poubelleDAO.getAll().get(poubelleDAO.getAll().size() - 1);
 
             Commerce commerce = new Commerce(0, "EcoMarket", centre);
             commerceDAO.insert(commerce);
-            commerce = commerceDAO.getAll(centre).getLast();
+            commerce = commerceDAO.getAllWithoutCentre().get(commerceDAO.getAllWithoutCentre().size() - 1);
 
+            // Liaisons
             cpDAO.insert(centre.getId(), poubelle.getId());
             ccDAO.insert(centre.getId(), commerce.getId());
 
-            CategorieProduit cp = new CategorieProduit(0, "Électroménager", 80, 0.15f);
-            categorieDAO.insert(cp);
-            cp = categorieDAO.getAll().getLast();
+            CategorieProduit categorieProduit = new CategorieProduit(0, "Électroménager", 80, 0.15f);
+            categorieDAO.insert(categorieProduit);
+            categorieProduit = categorieDAO.getAll().get(categorieDAO.getAll().size() - 1);
 
-            pcDAO.insert("Aspirateur", cp.getId());
-            ccpDAO.insert(commerce.getId(), cp.getId());
+            pcDAO.insert("Aspirateur", categorieProduit.getId());
+            ccpDAO.insert(commerce.getId(), categorieProduit.getId());
 
             List<CategorieProduit> listeProduits = new ArrayList<>();
-            listeProduits.add(cp);
+            listeProduits.add(categorieProduit);
 
             ContratPartenariat contrat = new ContratPartenariat(0,
                     LocalDate.now().minusDays(10),
                     LocalDate.now().plusDays(10),
                     centre, commerce);
-            contrat.ajouterCategorie(cp);
             contratDAO.insert(contrat);
 
-            BonDeCommande commande = new BonDeCommande(0, u, listeProduits, commerce);
-            commande.utiliserPoints(); // simule la validation
+            BonDeCommande commande = new BonDeCommande(0, u, categorieProduit, LocalDate.now(), 80);
             bdcDAO.insert(commande);
 
             // Création d’un dépôt et ajout dans l’historique
             Depot depot = new Depot(0, NatureDechet.PLASTIQUE, 2.5f, 3, LocalDateTime.now(), poubelle, u);
             depotDAO.insert(depot);
-            depot = depotDAO.getAll(poubelle, u).getLast();
 
-            historiqueDAO.insert(u.getId(), depot.getId());
+            depot = depotDAO.getByPoubelleId(poubelle.getId()).get(depotDAO.getByPoubelleId(poubelle.getId()).size() - 1);
+
+            historiqueDAO.insert(
+                    u.getId(),
+                    depot.getId(),
+                    Timestamp.valueOf(depot.getHeureDepot()),
+                    depot.getType().name(),
+                    depot.getPoints()
+            );
 
             // === Affichage final ===
             System.out.println("\n=== Utilisateurs ===");
@@ -94,34 +101,33 @@ public class MainTestDAO {
             }
 
             System.out.println("\n=== Produits associés à la catégorie ===");
-            for (String produit : pcDAO.getProduitsByCategorie(cp.getId())) {
+            for (String produit : pcDAO.getProduitsByCategorie(categorieProduit.getId())) {
                 System.out.println("- " + produit);
             }
 
             System.out.println("\n=== Commerces ===");
-            for (Commerce c : commerceDAO.getAll(centre)) {
+            for (Commerce c : commerceDAO.getAllWithoutCentre()) {
                 System.out.println("ID: " + c.getId() + " | Nom: " + c.getNom());
             }
 
             System.out.println("\n=== Contrats ===");
-            for (ContratPartenariat ct : contratDAO.getAll(centre, commerce)) {
+            for (ContratPartenariat ct : contratDAO.getAll()) {
                 System.out.println("Contrat #" + ct.getId() + " | Début: " + ct.getDateDebut() + " | Fin: " + ct.getDateFin());
             }
 
             System.out.println("\n=== Bons de Commande ===");
-            for (BonDeCommande b : bdcDAO.getAll(u, commerce, listeProduits)) {
-                System.out.println("ID: " + b.getId() + " | État: " + b.getEtatCommande() +
-                        " | Points utilisés: " + b.getPointsUtilises() + " | Date: " + b.getDateCommande());
+            for (BonDeCommande b : bdcDAO.getByUtilisateurId(u.getId())) {
+                System.out.println("ID: " + b.getId() + " | Points utilisés: " + b.getPointsUtilises());
             }
 
             System.out.println("\n=== Dépôts de l'utilisateur ===");
-            for (Depot d : depotDAO.getAll(poubelle, u)) {
-                System.out.println("Déchet: " + d.getType() + " | Poids: " + d.getPoids() + " | Points: " + d.getPoints());
+            for (Depot d : depotDAO.getByUtilisateurId(u.getId())) {
+                System.out.println("Déchet: " + d.getType() + " | Poids: " + d.getPoids() + "kg | Points: " + d.getPoints());
             }
 
             System.out.println("\n=== Historique Dépôts ===");
-            for (int id : historiqueDAO.getDepotsByUtilisateur(u.getId())) {
-                System.out.println("Dépot ID lié à l'utilisateur : " + id);
+            for (String historique : historiqueDAO.getHistoriqueDetailleByUtilisateur(u.getId())) {
+                System.out.println(historique);
             }
 
             conn.close();
